--- a/api/package.json
+++ b/api/package.json
@@ -9,16 +9,18 @@
   "author": "kirk",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^0.8.5",
-    "body-parser": "~1.9.2",
+    "bcrypt": "^1.0.3",
+    "body-parser": "~1.18.2",
     "connect-mongo": "^2.0.1",
-    "express": "~4.9.8",
-    "jwt-simple": "^0.3.1",
-    "moment": "^2.20.1",
-    "mongoose": "^5.0.1",
-    "morgan": "~1.5.0",
-    "nodemon": "^1.14.11",
-    "passport": "^0.3.0",
-    "passport-jwt": "^1.2.1"
+    "express": "~4.16.3",
+    "express-session": "^1.15.6",
+    "g": "^2.0.1",
+    "jwt-simple": "^0.5.1",
+    "moment": "^2.21.0",
+    "mongoose": "^5.0.12",
+    "morgan": "^1.9.0",
+    "nodemon": "^1.17.2",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0"
   }
 }
