--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build && nodemon api/index.js",
+    "build": "ng serve",
+    "start": "ng build && node api/index.js",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
