--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "ng": "ng",
     "build": "ng serve",
-    "start": "ng build && node api/index.js",
+    "start": "ng build && node index.js",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -24,14 +24,26 @@
     "@ng-bootstrap/ng-bootstrap": "^1.1.0",
     "angular-confirmation-popover": "^4.1.0",
     "axios": "^0.18.0",
+    "bcrypt": "^1.0.3",
+    "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0",
     "circular-json": "^0.5.1",
+    "connect-mongo": "^2.0.1",
     "core-js": "^2.5.4",
+    "demon": "^1.4.4",
     "enhanced-resolve": "^4.0.0",
+    "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "jquery": "^3.3.1",
+    "jwt-simple": "^0.5.1",
+    "moment": "^2.22.0",
+    "mongoose": "^5.0.13",
+    "morgan": "^1.9.0",
     "ng2-ckeditor": "^1.2.0",
     "ngx-quill": "^2.2.0",
     "ngx-quill-editor": "^2.2.2",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "popper.js": "^1.14.1",
     "querystring": "^0.2.0",
     "quill": "^1.3.6",
